--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   padding: 5px 10px;
   border: 0;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 1.5rem;
   transition: .5s transform;
   bottom: 50px;
 }
@@ -106,6 +106,25 @@ body {
 
 .github:hover {
   opacity: 1;
+}
+
+@media only screen and (max-width: 600px) {
+  .title {
+    font-size: 1.2rem;
+  }
+
+  .back {
+    font-size: 1rem;
+  }
+
+  .result {
+    height: 20px;
+  }
+
+  #twitter {
+    font-size: 1rem;
+    height: 20px;
+  }
 }
 
 .hidden {
