--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 .text {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #fff;
+  font-weight: 500;
 }
 
 .title {
@@ -47,6 +48,10 @@ body {
   margin: 10px 0px;
 }
 
+.account {
+  font-size: 22px;
+}
+
 #twitter {
   background: none;
   outline: none;
@@ -55,7 +60,6 @@ body {
   width: 50vw;
   height: 50px;
   text-align: center;
-  font-weight: 500;
   margin: 10px 0px;
 }
 
@@ -74,7 +78,6 @@ body {
 .back {
   position: absolute;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 500;
   background: none;
   border-radius: 50px;
   padding: 5px 10px;
@@ -121,10 +124,18 @@ body {
     height: 20px;
   }
 
+  .account {
+    font-size: 15px;
+  }
+
   #twitter {
     font-size: 1rem;
     height: 20px;
   }
+}
+
+.invisible {
+  visibility: hidden;
 }
 
 .hidden {
